fix: inline code color contrast for light and dark modes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,11 +37,11 @@ body {
   --fontColor: #000000;
   --headerColor: #000000;
   --linkColor: #0000bf;
-  --codeColor: #d23669;
+  --codeColor: #A80079;
   --activeLink: #000000;
   --inactiveLink: #999999;
   --codeblockTitle: #e6d9bb;
-  --underlinedColor: #DC2626;
+  --important: #B40808;
   --filter: opacity(1), contrast(1);
 
   margin: 0;
@@ -60,11 +60,11 @@ body.dark {
   --fontColor: #eee;
   --headerColor: white;
   --linkColor: #9999ff;
-  --codeColor: #ffa7c4;
+  --codeColor: #FF7EDB;
   --activeLink: white;
   --inactiveLink: #808080;
   --codeblockTitle: #fff1d0;
-  --underlinedColor: #F87171;
+  --important: #F86868;
   --filter: opacity(0.8), contrast(1.2);
 }
 
@@ -91,10 +91,6 @@ main {
 }
 
 /* HTML Body */
-em {
-  color: var(--underlinedColor) !important;
-}
-
 a {
   text-decoration: underline;
   color: var(--linkColor);
